--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: eba
-Version: 1.5-0
-Date: 2007/OCT/22
+Version: 1.5-1
+Date: 2008-03-28
 Title: Elimination-By-Aspects (EBA) Models
 Author: Florian Wickelmaier <wickelmaier@web.de>
 Maintainer: Florian Wickelmaier <wickelmaier@web.de>
@@ -10,6 +10,6 @@ Description: Fitting and testing multi-attribute probabilistic choice
   Terry, 1952; Luce, 1959), elimination-by-aspects (EBA) models
   (Tversky, 1972), and preference tree (Pretree) models (Tversky &
   Sattath, 1979).
-License: GPL version 2 or newer
+License: GPL (>= 2)
 URL: http://www.r-project.org, http://homepages.uni-tuebingen.de/florian.wickelmaier
-Packaged: Mon Oct 22 12:16:51 2007; siifw01
+Packaged: Fri Mar 28 15:01:59 2008; siifw01
