--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: eba
-Version: 1.5-6
-Date: 2010-01-09
+Version: 1.5-7
+Date: 2010-05-10
 Title: Elimination-By-Aspects (EBA) Models
 Author: Florian Wickelmaier
 Maintainer: Florian Wickelmaier <wickelmaier@web.de>
-Depends: R (>= 1.8.1), nlme
+Depends: R (>= 1.8.1)
+Imports: nlme
 Description: Fitting and testing multi-attribute probabilistic choice
         models, especially the Bradley-Terry-Luce (BTL) model (Bradley
         & Terry, 1952; Luce, 1959), elimination-by-aspects (EBA) models
@@ -13,6 +14,6 @@ Description: Fitting and testing multi-attribute probabilistic choice
 License: GPL (>= 2)
 URL: http://www.r-project.org,
         http://homepages.uni-tuebingen.de/florian.wickelmaier
-Packaged: Sat Jan 9 11:00:02 2010; siifw01
+Packaged: 2010-05-10 14:29:32 UTC; siifw01
 Repository: CRAN
-Date/Publication: 2010-01-09 10:15:36
+Date/Publication: 2010-05-10 14:50:21
