--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: eba
-Version: 1.5-7
-Date: 2010-05-10
-Title: Elimination-By-Aspects (EBA) Models
+Version: 1.6-0
+Date: 2011-03-03
+Title: Elimination-by-Aspects (EBA) Models
 Author: Florian Wickelmaier
 Maintainer: Florian Wickelmaier <wickelmaier@web.de>
 Depends: R (>= 1.8.1)
@@ -14,6 +14,6 @@ Description: Fitting and testing multi-attribute probabilistic choice
 License: GPL (>= 2)
 URL: http://www.r-project.org,
         http://homepages.uni-tuebingen.de/florian.wickelmaier
-Packaged: 2010-05-10 14:29:32 UTC; siifw01
+Packaged: 2011-03-03 17:34:00 UTC; siifw01
 Repository: CRAN
-Date/Publication: 2010-05-10 14:50:21
+Date/Publication: 2011-03-04 14:49:36
