--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: eba
-Version: 1.6-0
-Date: 2011-03-03
+Version: 1.7-0
+Date: 2011-08-31
 Title: Elimination-by-Aspects (EBA) Models
 Author: Florian Wickelmaier
 Maintainer: Florian Wickelmaier <wickelmaier@web.de>
-Depends: R (>= 1.8.1)
+Depends: R (>= 2.0.0), stats
 Imports: nlme
 Description: Fitting and testing multi-attribute probabilistic choice
         models, especially the Bradley-Terry-Luce (BTL) model (Bradley
@@ -14,6 +14,6 @@ Description: Fitting and testing multi-attribute probabilistic choice
 License: GPL (>= 2)
 URL: http://www.r-project.org,
         http://homepages.uni-tuebingen.de/florian.wickelmaier
-Packaged: 2011-03-03 17:34:00 UTC; siifw01
+Packaged: 2011-08-31 17:39:31 UTC; siifw01
 Repository: CRAN
-Date/Publication: 2011-03-04 14:49:36
+Date/Publication: 2011-09-01 08:43:44
