--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: eba
-Version: 1.7-0
-Date: 2011-08-31
+Version: 1.7-1
+Date: 2012-05-26
 Title: Elimination-by-Aspects (EBA) Models
 Author: Florian Wickelmaier
 Maintainer: Florian Wickelmaier <wickelmaier@web.de>
-Depends: R (>= 2.0.0), stats
+Depends: R (>= 2.15.0), stats
 Imports: nlme
 Description: Fitting and testing multi-attribute probabilistic choice
         models, especially the Bradley-Terry-Luce (BTL) model (Bradley
@@ -12,8 +12,8 @@ Description: Fitting and testing multi-attribute probabilistic choice
         (Tversky, 1972), and preference tree (Pretree) models (Tversky
         & Sattath, 1979).
 License: GPL (>= 2)
-URL: http://www.r-project.org,
-        http://homepages.uni-tuebingen.de/florian.wickelmaier
-Packaged: 2011-08-31 17:39:31 UTC; siifw01
+URL: http://homepages.uni-tuebingen.de/florian.wickelmaier
+Packaged: 2013-05-26 18:09:00 UTC; siifw01
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2011-09-01 08:43:44
+Date/Publication: 2013-05-27 09:01:49
